Creating 'Paint' Curve in Blender 3.2 April 1 build crashes Blender #96957

Closed
opened 2022-04-01 19:46:47 +02:00 by Bill Ortis · 8 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-31 17:14, hash: 42853bacc9
Worked: (newest version of Blender that worked as expected)

Short description of error
Create Curve in Paint Mode crashes Blender, CTD.
You can paint in Paint Mode on an object, but if you attempt to create a Curve for 'Stroke Method', that appears to crash Blender.

Screenshot 2022-04-01 104607.jpg

Exact steps for others to reproduce the error

  • Have object to paint, selected.
  • Go to 'Texture Paint' mode
  • On the Sidebar, go to {nav Tool > Brush Settings > Stroke} and select the Stroke Method Curve
  • Click on New to add a new paint curve
  • Click on Draw Curve and in the screen, attempt to create a Curve.
    I have been able to get to first click (rarely) and screen blips to desktop. Instant crash.
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 457.51 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-31 17:14, hash: `42853bacc9` Worked: (newest version of Blender that worked as expected) **Short description of error** Create Curve in Paint Mode crashes Blender, CTD. You can paint in Paint Mode on an object, but if you attempt to create a Curve for 'Stroke Method', that appears to crash Blender. ![Screenshot 2022-04-01 104607.jpg](https://archive.blender.org/developer/F12962297/Screenshot_2022-04-01_104607.jpg) **Exact steps for others to reproduce the error** - Have object to paint, selected. - Go to 'Texture Paint' mode - On the Sidebar, go to {nav Tool > Brush Settings > Stroke} and select the `Stroke Method` Curve - Click on `New` to add a new paint curve - Click on `Draw Curve` and in the screen, attempt to create a Curve. I have been able to get to first click (rarely) and screen blips to desktop. Instant crash.
Author

Added subscriber: @lionheart001

Added subscriber: @lionheart001
Author

I just tested this in yesterdays Blender 3.2 build and it works fine. So it appears to only be in todays April 1st build.

I just tested this in yesterdays Blender 3.2 build and it works fine. So it appears to only be in todays April 1st build.
Author

It appears that if you 'paint' the Curve (not create it, but to paint from the curve object onto the part you have made that you are painting), Blender crashes also. This is in yesterdays Blender 3.2 March 31st Build.
I got mine to paint the Curve onto the object, but after 2 seconds, it did a CTD.

It appears that if you 'paint' the Curve (not create it, but to paint from the curve object onto the part you have made that you are painting), Blender crashes also. This is in yesterdays Blender 3.2 March 31st Build. I got mine to paint the Curve onto the object, but after 2 seconds, it did a CTD.

Added subscribers: @JacquesLucke, @mano-wii

Added subscribers: @JacquesLucke, @mano-wii

Thanks for the report.
I can reproduce in fewer steps and consistently.
Strange that you say it worked fine yesterday. Looking at the changes in this area, probably the bug was introduced in 141d5851d7.
In fact, reverting that commit seems to fix the problem.


I also took the initiative to edit the description in the report as some steps didn't seem necessary. Hope it's ok for you.

Thanks for the report. I can reproduce in fewer steps and consistently. Strange that you say it worked fine yesterday. Looking at the changes in this area, probably the bug was introduced in 141d5851d7. In fact, reverting that commit seems to fix the problem. --- *I also took the initiative to edit the description in the report as some steps didn't seem necessary. Hope it's ok for you.*

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 1cdf8b19e5

This issue was referenced by 1cdf8b19e5885c26f7341a0c21d243401a89d50e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-04-03 10:50:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96957
No description provided.